# OpenCVCUDAImageProcessing

./: .gitignore  README.org
Exercise1/CUDA/colorTransformation/: hueShift.cpp  hueShift.cu
Exercise1/CUDA/convolutionGauss/: gaussFilter.cpp  gaussFilter.cu
Exercise1/CUDA/convolutionLaplace/: laplaceFilter.cpp  laplaceFilter.cu
Exercise1/CUDA/imageArithmetic/: imArithmetic.cpp  imArithmetic.cu
Exercise1/CUDA/imageTransformation/: imScaling.cpp  imScaling.cu
Exercise1/CUDA/medianFilter/: medianFilter.cpp  medianFilter.cu
Exercise1/CUDA/separableGauss/: separableGauss.cpp  separableGauss.cu
Exercise1/OpenCV/colorTransform/: hueShift.cpp
Exercise1/OpenCV/colorTransformation/: hueShift.cpp
Exercise1/OpenCV/convolutionGauss/: gaussFilter.cpp
Exercise1/OpenCV/convolutionLaplace/: laplacianFilter.cpp
Exercise1/OpenCV/imageArithmetic/: imArithmetic.cpp
Exercise1/OpenCV/imageTransformation/: imTransform.cpp
Exercise1/OpenCV/medianFilter/: medianFilter.cpp
Exercise1/OpenCV/separableGauss/: sepGaussFilter.cpp
Exercise1/common/scripts/: CMakeLists.txt  CUDA.cmake
Exercise2/CUDA/convolutionGauss/: gaussFilter.cpp  gaussFilter.cu
Exercise2/CUDA/convolutionLaplace/: laplaceFilter.cpp  laplaceFilter.cu
Exercise2/CUDA/medianFilter/: medianFilter.cpp  medianFilter.cu
Exercise2/CUDA/separableGauss/: separableGauss.cpp  separableGauss.cu
common/scripts/: CUDA.cmake
